# algebraic-checker

./: algebraic-checker.cabal  stack.yaml
app/: Main.hs
src/: Algebraic.hs  Horn.hs  LaCarte.hs  Lib.hs  NaturalHorn.hs  Nn.hs  Term.hs
src/NHorn/: LaCarte.hs  NaturalHorn.hs  NaturalHornExts.hs  NaturalHornPretty.hs  Sequent.hs
test/: AlgebraicTest.hs  Category.hs  HorTest.hs  HornTest.hs  NaturalCategory.hs  Spec.hs  TermTest.hs
