name:                algebraic-checker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/algebraic-checker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Term
                     , NaturalHorn
                    -- , Algebraic
                    -- , Horn
  other-modules:       NHorn.LaCarte
                     , NHorn.NaturalHorn
                     , NHorn.NaturalHornExts
                     , NHorn.NaturalHornPretty
                     , NHorn.Sequent
                     
  build-depends:       base >= 4.7 && < 5
                     , wl-pprint == 1.1
                     , containers == 0.5.5.*
                     , compdata
  default-language:    Haskell2010

executable algebraic-checker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , algebraic-checker
  default-language:    Haskell2010

test-suite algebraic-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algebraic-checker
                     , HUnit >= 1.2 && < 1.3
                     , QuickCheck >=2.1.0.3 && <2.8
                     , testpack == 2.1.3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/esengie/algebraic-checker
